[package]
name = "rust_jwt_api_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7.2.0"
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11.7", features = ["json"]}
serde = "1.0.130"
futures = "0.3.18"
rocket = "0.5.0-rc.1"
dotenv = "0.15.0"